Fix Firefox/Safari extension popup jump

--- a/src/co/screen/basic/index.module.css
+++ b/src/co/screen/basic/index.module.css
@@ -30,7 +30,7 @@ body {
 
 @media (prefers-color-scheme: light) {
     html[data-theme='day']:global(.extension):global(.browser_action):global(.safari:not(.safari-ios)) body {
-        background: linear-gradient(to bottom, hsla(var(--background-hsl), 0) 0, hsla(var(--background-hsl), 0.7) 50px, hsla(var(--background-hsl), 1) 100px)
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0, rgba(255,255,255,.7) 100px)
     }
 }
 
